# XZeroLog

./: CMakeLists.txt  README.md
.cache/clangd/index/: ConsoleLogger.cpp.E33D8A07E3BE5771.idx  ConsoleLogger.h.464779CADA1A6C16.idx  ConsoleLoggerFactory.cpp.8E1D985323181634.idx  ConsoleLoggerFactory.h.DD25AED6A6ABBA15.idx  FileLogger.cpp.A1AA40EDDE20A1CA.idx  FileLogger.cpp.A9C1F9837C86C427.idx  FileLogger.h.1E9EE6A42DFB1A00.idx  FileLogger.h.AC8763172A61644A.idx  FileLoggerFactory.cpp.5411362262008275.idx  FileLoggerFactory.h.74B3CA9A8EB2F46D.idx  LogConfig.h.B91144EC02FB8871.idx  LogConfig.h.E8852C2913759FD1.idx  LogContext.cpp.800C2BDFE9FEE773.idx  LogContext.cpp.E5E49BDFC6D39C1A.idx  LogContext.h.293862551A1327B7.idx  LogContext.h.7E885B80CFB166E5.idx  LogUtils.cpp.5D1348941513BA17.idx  LogUtils.cpp.C3710D86F7F68E99.idx  LogUtils.h.01473331BB7E30F4.idx  LogUtils.h.DD40C220790757C6.idx  Logger.h.E7375371A6BE7B4A.idx  Logger.h.F245430287AE0409.idx  LoggerFactory.h.484A864643988F04.idx  LoggerFactory.h.9997634C7AA5A1C2.idx  LoggerFile.cpp.632338C6264753F7.idx  LoggerFile.h.3DDDCF4B22D82077.idx  XZeroLog.cpp.37276C0F7E7AED7D.idx  XZeroLog.cpp.484DC6BB8D32DE0D.idx  XZeroLog.h.61A39E4413F13BA1.idx  XZeroLog.h.B543344DA827724D.idx  main.cpp.18E790900E703664.idx  main.cpp.89ED1FD7CF76E0D5.idx  main.cpp.93F98D85FB08A6FC.idx  testLogger.cpp.2FD413B2EC195AEF.idx  testLogger.cpp.B01C0122B6477010.idx  testLogger.cpp.CA487FAA79F6A422.idx
demo/: main.cpp  testLogger.cpp
include/: FileLogger.h  LogConfig.h  LogContext.h  LogUtils.h  Logger.h  LoggerFactory.h  XZeroError.h  XZeroLog.h
src/: FileLogger.cpp  LogContext.cpp  LogUtils.cpp  XZeroLog.cpp
